--- a/dma/quantumsystem.ipynb
+++ b/dma/quantumsystem.ipynb
@@ -11,6 +11,8 @@
     "from string import Template\n",
     "import json\n",
     "from dataclasses import dataclass\n",
+    "import os\n",
+    "import shutil\n",
     "\n",
     "from cog.torque import Graph\n",
     "import pygraphviz as pgv\n",
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c8e8767c-48a0-4210-806b-dfefeea5878e",
    "metadata": {},
    "outputs": [],
@@ -61,6 +63,14 @@
     "    class Entity:\n",
     "        \"\"\" An Entity is an anchor onto which Systems and HyperSystems attach \"\"\"\n",
     "        entity_id: str\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def get(cls, entity_id):\n",
+    "            \"\"\"Retrieve the Graph Node at `entity_id` and all immediate neighbors with edges\"\"\"\n",
+    "            return cls(entity_id, **{\n",
+    "                e: node['id']\n",
+    "                for node in QuantumSystem.v(entity_id).out().all('e')['result']\n",
+    "                for e in node['edges']})\n",
     "    \n",
     "    class System:\n",
     "        \"\"\" Systems describe relationships between nouns \"\"\"\n",
@@ -84,6 +94,10 @@
     "        @classmethod\n",
     "        def relationships_by_id(cls):\n",
     "            return {rel['id']: rel for rel in cls.relationships()}\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def get_edge_names(cls):\n",
+    "            return [cls.__name__]\n",
     "        \n",
     "        @classmethod\n",
     "        def validate(cls):\n",
@@ -113,7 +127,7 @@
     "        \n",
     "        @classmethod\n",
     "        def get_edge_names(cls):\n",
-    "            return [system.edge_name for system in cls.systems]\n",
+    "            return [system.get_edge_name() for system in cls.systems]\n",
     "        \n",
     "        @classmethod\n",
     "        def validate(cls):\n",
@@ -132,8 +146,12 @@
     "        @classmethod\n",
     "        def all_metasystems(cls):\n",
     "            for subclass in cls.__subclasses__():\n",
-    "                yield from subclass.all_metaclasses()\n",
+    "                yield from subclass.all_metasystems()\n",
     "                yield subclass\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def get_edge_names(cls):\n",
+    "            return [system.get_edge_name() for system in cls.systems]\n",
     "        \n",
     "        @classmethod\n",
     "        def build_system(cls, anchor, terminants):\n",
@@ -145,7 +163,8 @@
     "\n",
     "    @classmethod\n",
     "    def reset(cls):\n",
-    "        !rm -rf /tmp/cog_home\n",
+    "        if os.path.exists('/tmp/cog_home/'):\n",
+    "            shutil.rmtree('/tmp/cog_home')\n",
     "        cls.graph = Graph(cls.quantum_system_name)\n",
     "    \n",
     "    @classmethod\n",
@@ -175,14 +194,7 @@
     "    def drop(cls, entity_id, edge_name, system_value):\n",
     "        if type(edge_name) is type:\n",
     "            edge_name = edge_name.__name__\n",
-    "        cls.graph.drop(entity_id, edge_name, system_value)    \n",
-    "    \n",
-    "    @classmethod\n",
-    "    def replace(cls, entity_id, edge_name, old_system_value, new_system_value):\n",
-    "        if type(edge_name) is type:\n",
-    "            edge_name = edge_name.__name__\n",
-    "        cls.graph.drop(entity_id, edge_name, old_system_value)    \n",
-    "        cls.graph.put(entity_id, edge_name, new_system_value) \n",
+    "        cls.graph.drop(entity_id, edge_name, system_value)\n",
     "    \n",
     "    @classmethod\n",
     "    def validate(cls):\n",
@@ -269,14 +281,6 @@
     "        return Image(f'{cls.quantum_system_name}.png')\n",
     "qs = QuantumSystem"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2512ad1-0f09-4e46-b9ff-5058cc9e7c48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -295,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
