--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -31,7 +31,8 @@
     "from datetime import datetime\n",
     "import requests\n",
     "from dataclasses import dataclass\n",
-    "from traceback import format_exc"
+    "from traceback import format_exc\n",
+    "from uuid import uuid4"
    ]
   },
   {
@@ -64,9 +65,9 @@
    },
    "outputs": [],
    "source": [
-    "sr = cv2.dnn_superres.DnnSuperResImpl_create()\n",
-    "sr.readModel(\"FSRCNN_x4.pb\")\n",
-    "sr.setModel(\"fsrcnn\", 4);\n",
+    "# sr = cv2.dnn_superres.DnnSuperResImpl_create()\n",
+    "# sr.readModel(\"FSRCNN_x4.pb\")\n",
+    "# sr.setModel(\"fsrcnn\", 4);\n",
     "\n",
     "\n",
     "def distanceFormula(pt0, pt1):\n",
@@ -497,6 +498,7 @@
     "@dataclass\n",
     "class TrackedObject(ChangeSet):\n",
     "    def __post_init__(self):\n",
+    "        self.oid = str(uuid4())\n",
     "        self.icon = sorted([cs.after for cs in self.changeSet.values()\n",
     "                            if cs is not None and cs.changeType != \"delete\"],\n",
     "                           key=lambda x: x.size if x is not None else 0)[0]\n",
@@ -591,7 +593,7 @@
     "        py = (M[1][0]*p[0] + M[1][1]*p[1] + M[1][2]) / ((M[2][0]*p[0] + M[2][1]*p[1] + M[2][2]))\n",
     "        return (px, py)\n",
     "        \n",
-    "    def showUnwarpedImage(self):\n",
+    "    def showUnwarpedImage(self, cameras):\n",
     "        cam = cameras[self.camNum]\n",
     "        warp = cv2.warpPerspective(cam.cropToActiveZone(cam.mostRecentFrame), self.M, (1200, 1200))\n",
     "        return warp"
@@ -653,7 +655,7 @@
     "        previousLocation = self.changeSetToRealCenter(previousChangeSet)\n",
     "        return distanceFormula(previousLocation, currentLocation)\n",
     "\n",
-    "    def cameraRealSpaceOverlap(self):\n",
+    "    def cameraRealSpaceOverlap(self, cameras):\n",
     "        im = None\n",
     "        warps = []\n",
     "        for camNum, camConverters in self.converters.items():\n",
@@ -667,7 +669,7 @@
     "        realSpaceContour = cv2.findContours(avg_im, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[0]\n",
     "        return realSpaceContour\n",
     "\n",
-    "    def unwarpedOverlaidCameras(self):\n",
+    "    def unwarpedOverlaidCameras(self, cameras):\n",
     "        im = None\n",
     "        for camNum, camConverters in self.converters.items():\n",
     "            cam = cameras[camNum]\n",
@@ -679,52 +681,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c37f5df8-5efb-417d-a3c6-8db6ce3064fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cameras = defaultdict(lambda: None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "fac2d2c7-7d3c-4e4d-8859-70c521f7deae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass\n",
     "class CaptureConfiguration:\n",
-    "    name: str\n",
-    "    \n",
-    "    def __post_init__(self):\n",
-    "        self.lastCapture = None\n",
-    "        self.rsc = None\n",
-    "    \n",
-    "    def capture(self):\n",
-    "        self.lastCapture = {cam.camNum: cam.capture() for cam in cameras.values()}\n",
-    "\n",
-    "    def setBase(self):\n",
-    "        for c in cameras.values():\n",
-    "            c.setBaseFrame()\n",
-    "    \n",
-    "    def setReference(self):\n",
-    "        for c in cameras.values():\n",
-    "            c.setReferenceFrame()\n",
-    "    \n",
-    "    def scanCamsForCalibrationBoxes(self):\n",
-    "        return {cam.camNum: (qrs := decode(cam.mostRecentFrame), len(qrs)) for cam in cameras.values()}\n",
-    "    \n",
-    "    def saveConfiguration(self):\n",
-    "        state = {\n",
-    "            camNum: {\n",
-    "                \"addr\": cam.address,\n",
-    "                \"rot\": cam.rotate,\n",
-    "                \"az\": json.dumps(cam.activeZone.tolist())}\n",
-    "            for camNum, cam in cameras.items()}\n",
-    "        if self.rsc is not None:\n",
-    "            state[\"rsc\"] = [[cN, [[a.tolist() for a in coordList[0]], [a.tolist() for a in coordList[1]]]]\n",
-    "                            for cN, coordList in cm.cc.rsc.realCamSpacePairs]\n",
-    "        else:\n",
-    "            state[\"rsc\"] = None\n",
-    "        with open(\"observerConfiguration.json\", \"w\") as f:\n",
-    "            f.write(json.dumps(state, indent=2))\n",
-    "            \n",
-    "    def recoverConfiguration(self):\n",
-    "        with open(\"observerConfiguration.json\", \"r\") as f:\n",
-    "            state = json.loads(f.read())\n",
-    "        for camNum, camDef in state.items():\n",
+    "    def __init__(self, configurationJSON):\n",
+    "        config = json.loads(configurationJSON)\n",
+    "        for camNum, camDef in config.items():\n",
     "            if str(camNum) == \"pov\":\n",
     "                global pov\n",
     "                addr = camDef['addr']\n",
@@ -742,7 +717,36 @@
     "                addr = camDef['addr']\n",
     "                rot = camDef['rot']\n",
     "                az = np.float32(json.loads(camDef['az']))\n",
-    "                cameras[int(camNum)] = RemoteCamera(address=addr, activeZone=az, camNum=int(camNum))"
+    "                cameras[int(camNum)] = RemoteCamera(address=addr, activeZone=az, camNum=int(camNum))\n",
+    "        self.cameras = cameras\n",
+    "    \n",
+    "    def capture(self):\n",
+    "        self.lastCapture = {cam.camNum: cam.capture() for cam in self.cameras.values()}\n",
+    "\n",
+    "    def setBase(self):\n",
+    "        for c in self.cameras.values():\n",
+    "            c.setBaseFrame()\n",
+    "    \n",
+    "    def setReference(self):\n",
+    "        for c in self.cameras.values():\n",
+    "            c.setReferenceFrame()\n",
+    "    \n",
+    "    def scanCamsForCalibrationBoxes(self):\n",
+    "        return {cam.camNum: (qrs := decode(cam.mostRecentFrame), len(qrs)) for cam in self.cameras.values()}\n",
+    "    \n",
+    "    def jsonConfiguration(self):\n",
+    "        state = {\n",
+    "            camNum: {\n",
+    "                \"addr\": cam.address,\n",
+    "                \"rot\": cam.rotate,\n",
+    "                \"az\": json.dumps(cam.activeZone.tolist())}\n",
+    "            for camNum, cam in self.cameras.items()}\n",
+    "        if self.rsc is not None:\n",
+    "            state[\"rsc\"] = [[cN, [[a.tolist() for a in coordList[0]], [a.tolist() for a in coordList[1]]]]\n",
+    "                            for cN, coordList in self.rsc.realCamSpacePairs]\n",
+    "        else:\n",
+    "            state[\"rsc\"] = None\n",
+    "        return json.dumps(state, indent=2)"
    ]
   },
   {
@@ -781,14 +785,14 @@
     "        return self.cc.rsc is not None\n",
     "    \n",
     "    def interactionDetection(self):\n",
-    "        detections = {cam.camNum: cam.interactionDetection(cam.mostRecentFrame) for cam in cameras.values()}\n",
+    "        detections = {cam.camNum: cam.interactionDetection(cam.mostRecentFrame) for cam in self.cc.cameras.values()}\n",
     "        return sum(detections.values()) > 0\n",
     "    \n",
     "    def updateReference(self):\n",
     "        self.cc.setReference()\n",
     "        \n",
     "    def referenceFrameDeltas(self):\n",
-    "        return ChangeSet({camNum: cam.referenceFrameDelta() for camNum, cam in cameras.items()})\n",
+    "        return ChangeSet({camNum: cam.referenceFrameDelta() for camNum, cam in self.cc.cameras.items()})\n",
     "    \n",
     "    def commitChanges(self, objDef):\n",
     "        try:\n",
@@ -801,13 +805,13 @@
     "        self.lastMemory = objDef\n",
     "        \n",
     "        for camNum, change in objDef.changeSet.items():\n",
-    "            cameras[camNum].commitChange(change)\n",
+    "            self.cc.cameras[camNum].commitChange(change)\n",
     "        \n",
     "        self.transitions.append({\n",
     "            \"obj\": objDef,\n",
     "            \"cycle\": self.cycleCounter,\n",
     "            \"cameraChanges\":  {camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
-    "                               for camNum, cam in cameras.items()}})\n",
+    "                               for camNum, cam in self.cc.cameras.items()}})\n",
     "    \n",
     "    def memoriesInChangeOrder(self):\n",
     "        changeOrderMemories = []\n",
@@ -819,13 +823,12 @@
     "                if len(changeOrderMemories) == len(self.memory):\n",
     "                    return changeOrderMemories\n",
     "        raise Exception(\"Failed to reconstruct memories in change order\")\n",
-    "        \n",
-    "    @staticmethod\n",
-    "    def classifyChanges(changes):\n",
+    "\n",
+    "    def classifyChanges(self, changes):\n",
     "        objDef = {}\n",
     "        for camNum, change in changes.changeSet.items():\n",
     "            if change is not None:\n",
-    "                objDef[camNum] = cameras[camNum].classifyChange(change)\n",
+    "                objDef[camNum] = self.cc.cameras[camNum].classifyChange(change)\n",
     "            else:\n",
     "                objDef[camNum] = None\n",
     "        return TrackedObject(objDef)\n",
@@ -855,7 +858,7 @@
     "\n",
     "    def buildMiniMap(self):\n",
     "        if self.realSpaceContour is None:\n",
-    "            self.realSpaceContour = cc.rsc.cameraRealSpaceOverlap()\n",
+    "            self.realSpaceContour = self.cc.rsc.cameraRealSpaceOverlap(self.cc.cameras)\n",
     "            self.realSpaceBoundingBox = cv2.boundingRect(self.realSpaceContour[-1])\n",
     "        x, y, w, h = self.realSpaceBoundingBox\n",
     "        objs = self.memory\n",
@@ -938,18 +941,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "2328f428-b048-4c6a-89c6-6dc1ce0282c3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m pov \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m      3\u001b[0m configurationFileName \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobserverConfiguration.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m cc \u001b[38;5;241m=\u001b[39m \u001b[43mCaptureConfiguration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfigurationFileName\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m cameras \u001b[38;5;241m=\u001b[39m cc\u001b[38;5;241m.\u001b[39mcameras\n\u001b[1;32m      6\u001b[0m cm \u001b[38;5;241m=\u001b[39m CaptureMachine(cc)\n",
+      "Cell \u001b[0;32mIn[10], line 4\u001b[0m, in \u001b[0;36mCaptureConfiguration.__init__\u001b[0;34m(self, configurationJSON)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, configurationJSON):\n\u001b[1;32m      3\u001b[0m     cameras \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 4\u001b[0m     config \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfigurationJSON\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m camNum, camDef \u001b[38;5;129;01min\u001b[39;00m config\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(camNum) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpov\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[1;32m    333\u001b[0m     \u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscan_once(s, idx)\n\u001b[1;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m--> 355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    356\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
    "source": [
-    "cameras = defaultdict(lambda x: None)\n",
-    "pov = None\n",
-    "cc = CaptureConfiguration(__name__)\n",
-    "cc.recoverConfiguration()\n",
-    "cm = CaptureMachine(cc)"
+    "if __name__ == \"__main__\":\n",
+    "    pov = None\n",
+    "    with open(\"observerConfiguration.json\", \"r\") as f:\n",
+    "        config = f.read()\n",
+    "    cc = CaptureConfiguration(config)\n",
+    "    cameras = cc.cameras\n",
+    "    cm = CaptureMachine(cc)"
    ]
   },
   {
