Harmony Object Assignment

--- a/dma/quantumsystem.ipynb
+++ b/dma/quantumsystem.ipynb
@@ -197,6 +197,11 @@
     "        cls.graph.drop(entity_id, edge_name, system_value)\n",
     "    \n",
     "    @classmethod\n",
+    "    def replace(cls, entity_id, edge_name, old_value, new_value):\n",
+    "        cls.drop(entity_id, edge_name, old_value)\n",
+    "        cls.put(entity_id, edge_name, new_value)\n",
+    "    \n",
+    "    @classmethod\n",
     "    def validate(cls):\n",
     "        results = {}\n",
     "        for system in list(cls.System.all_systems()) + list(cls.HyperSystem.all_hypersystems()):\n",
