--- a/harmony/HarmonyEye.ipynb
+++ b/harmony/HarmonyEye.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "08c73f06-a340-44c8-84b6-a88123472897",
    "metadata": {
     "tags": []
@@ -11,6 +11,8 @@
    "source": [
     "from random import randint\n",
     "from collections import defaultdict\n",
+    "from uuid import uuid4\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from ipynb.fs.full.Observer import CaptureMachine, TrackedObject, CaptureConfiguration, Camera, hStackImages, vStackImages\n",
@@ -21,12 +23,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb5af7d-4de9-450d-973b-db9de4fc2918",
+   "id": "e5011882-6494-420e-9820-66707947d6a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class QuantumMemory(TrackedObject):\n",
-    "    name: str"
+    "@dataclass\n",
+    "class QuantumObject(TrackedObject):\n",
+    "    name: str\n",
+    "    objectType: str\n",
+    "    \n",
+    "    def __post_init__(self):\n",
+    "        super().__post_init__()\n",
+    "        self.qid = str(uuid4())\n",
+    "        \n",
+    "    def update(self, trackedObjDef: TrackedObject):\n",
+    "        self.changeSet = trackedObjDef.changeSet"
    ]
   },
   {
@@ -42,9 +53,44 @@
     "    def __init__(self, captureConfiguration: CaptureConfiguration):\n",
     "        super().__init__(captureConfiguration)\n",
     "        self.hc = self.cc\n",
+    "        mc.qs.reset()\n",
+    "        self.newObjectBuffer = []\n",
     "    \n",
     "    def isLegal(self, classifiedChange):\n",
     "        return True\n",
+    "    \n",
+    "    def storeNewObject(self, objDef):\n",
+    "        assert objDef.isNewObject, \"Cannot add non-new objects\"\n",
+    "        self.newObjectBuffer.append(objDef)\n",
+    "        self.lastMemory = objDef\n",
+    "        \n",
+    "        for camNum, change in objDef.changeSet.items():\n",
+    "            self.cc.cameras[camNum].commitChange(change)\n",
+    "        \n",
+    "        self.transitions.append({\n",
+    "            \"obj\": objDef,\n",
+    "            \"cycle\": self.cycleCounter,\n",
+    "            \"cameraChanges\":  {camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
+    "                               for camNum, cam in self.cc.cameras.items()}})\n",
+    "    \n",
+    "    def commitChanges(self, objDef):\n",
+    "        try:\n",
+    "            existingIndex = self.memory.index(objDef.previousVersion())\n",
+    "            existingObj = self.memory[existingIndex]\n",
+    "            print(f\"Updating Memory {existingIndex}\")\n",
+    "            existingObj.update(objDef)\n",
+    "        except ValueError:\n",
+    "            raise Exception(\"Cannot commit to unrecognized memory\")\n",
+    "        self.lastMemory = existingObj\n",
+    "        \n",
+    "        for camNum, change in objDef.changeSet.items():\n",
+    "            self.cc.cameras[camNum].commitChange(change)\n",
+    "        \n",
+    "        self.transitions.append({\n",
+    "            \"obj\": objDef,\n",
+    "            \"cycle\": self.cycleCounter,\n",
+    "            \"cameraChanges\":  {camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
+    "                               for camNum, cam in self.cc.cameras.items()}})\n",
     "    \n",
     "    def cycle(self):\n",
     "        try:\n",
@@ -67,7 +113,7 @@
     "                    classification = self.classifyChanges(changes)\n",
     "                    if self.mode in [\"move\", \"action\"]:\n",
     "                        try:\n",
-    "                            assert not classification.isNewObject(), f\"Cannot add objects in {self.mode}\"\n",
+    "                            assert not classification.isNewObject, f\"Cannot add objects in {self.mode}\"\n",
     "                            assert self.isLegal(classification), f\"{classificaton} is an illegal move\"\n",
     "                            nextState = \"idle\"\n",
     "                            self.commitChanges(classification)\n",
@@ -76,7 +122,7 @@
     "                            nextState = \"illegal\"\n",
     "                    elif self.mode == \"add\":\n",
     "                        nextState = \"idle\"\n",
-    "                        self.commitChanges(classification)\n",
+    "                        self.storeNewObject(classification)\n",
     "                        self.hc.setReference()\n",
     "                    elif self.mode == \"calibrate\":\n",
     "                        try:\n",
