TrackedObject Real footprint estimation for minimap

--- a/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -69,7 +69,10 @@
    "outputs": [],
    "source": [
     "class SizeSystem(QuantumSystem.System):\n",
-    "    edge_name = \"size\""
+    "    pass\n",
+    "\n",
+    "class TMMSystem(QuantumSystem.System):\n",
+    "    pass"
    ]
   },
   {
@@ -118,7 +121,7 @@
     "    edge_name = \"point_value\"\n",
     "    \n",
     "class MechDefinitionSystem(QuantumSystem.HyperSystem):\n",
-    "    systems = [MechTypeSystem, MechModelSystem, MechRoleSystem, SizeSystem, SpecialSystem, PointValueSystem]"
+    "    systems = [MechTypeSystem, MechModelSystem, MechRoleSystem, SizeSystem, TMMSystem, SpecialSystem, PointValueSystem]"
    ]
   },
   {
@@ -152,24 +155,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kingfisherFactory = MechSystem.buildMechFactory([\n",
-    "    [   # Unit System\n",
-    "        [  # Move System\n",
-    "            json.dumps([3, 3, 0]), \"8j\"\n",
+    "MechFactories = {\n",
+    "    \"Kingfisher Prime\": MechSystem.buildMechFactory([\n",
+    "        [   # Unit System\n",
+    "            [  # Move System\n",
+    "                json.dumps([0, 0]), \"0\", \"8j\"\n",
+    "            ],\n",
+    "            [  # Weapons System\n",
+    "                [[\"0\", \"6\"]], [[\"2\", \"6\"]], [[\"4\", \"3\"]], \"1\", \"3\"\n",
+    "            ],\n",
+    "            [  # Unit Damage System\n",
+    "                [\"9\", \"7\"], [\"1\", \"4\", \"4\", \"4\"]\n",
+    "            ]\n",
     "        ],\n",
-    "        [  # Weapons System\n",
-    "            [[\"0\", \"5\"]], [[\"2\", \"3\"]], [[\"5\", \"1\"]], \"1\", \"3\"\n",
-    "        ],\n",
-    "        [  # Unit Damage System\n",
-    "            [\"9\", \"7\"], [\"1\", \"4\", \"5\", \"6\"]\n",
+    "        [  # Mech Definition System\n",
+    "            \"BM\", \"Kingfisher Prime\", \"Brawler\", \"4\", \"1\", json.dumps([\"OMNI\", \"CASE\", \"IF01\"]), \"54\"\n",
     "        ]\n",
-    "    ],\n",
-    "    [  # Mech Definition System\n",
-    "        \"BM\", \"Kingfisher Prime\", \"Brawler\", \"4\", json.dumps([\"OMNI\", \"CASE\", \"IF01\"]), \"54\"\n",
-    "    ]\n",
-    "])\n",
-    "\n",
-    "MechFactories = [kingfisherFactory]"
+    "    ]),\n",
+    "    \"Atlas\": MechSystem.buildMechFactory([\n",
+    "        [   # Unit System\n",
+    "            [  # Move System\n",
+    "                json.dumps([0, 0]), \"0\", \"6\"\n",
+    "            ],\n",
+    "            [  # Weapons System\n",
+    "                [[\"0\", \"4\"]], [[\"2\", \"4\"]], [[\"4\", \"4\"]], \"1\", \"3\"\n",
+    "            ],\n",
+    "            [  # Unit Damage System\n",
+    "                [\"10\", \"8\"], [\"1\", \"4\", \"4\", \"4\"]\n",
+    "            ]\n",
+    "        ],\n",
+    "        [  # Mech Definition System\n",
+    "            \"BM\", \"Atlas\", \"Juggernaut\", \"4\", \"1\", json.dumps([\"AC2\", \"IF1\", \"LRM1\", \"REAR2\"]), \"52\"\n",
+    "        ]\n",
+    "    ]),\n",
+    "    \"Huntsman\": MechSystem.buildMechFactory([\n",
+    "        [   # Unit System\n",
+    "            [  # Move System\n",
+    "                json.dumps([0, 0]), \"0\", \"10j\"\n",
+    "            ],\n",
+    "            [  # Weapons System\n",
+    "                [[\"0\", \"3\"]], [[\"2\", \"3\"]], [[\"4\", \"2\"]], \"3\", \"3\"\n",
+    "            ],\n",
+    "            [  # Unit Damage System\n",
+    "                [\"6\", \"3\"], [\"1\", \"4\", \"4\", \"4\"]\n",
+    "            ]\n",
+    "        ],\n",
+    "        [  # Mech Definition System\n",
+    "            \"BM\", \"Huntsman\", \"Sniper\", \"2\", \"2\", json.dumps([\"OMNI\", \"CASE\", \"IF1\", \"FLK0\"]), \"37\"\n",
+    "        ]\n",
+    "    ])\n",
+    "}"
    ]
   },
   {
@@ -212,6 +247,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
+    "    from IPython.display import display\n",
     "    try:\n",
     "        MoveSystem.move(\"Gypsy Danger\", [15, 1, 1])\n",
     "    except AssertionError as ae:\n",
@@ -220,16 +256,10 @@
     "    try:\n",
     "        MoveSystem.move(\"Apartment\", [1, 0, 0])\n",
     "    except Exception as e:\n",
-    "        print(f\"Received: {e}\")"
+    "        print(f\"Received: {e}\")\n",
+    "\n",
+    "    display(qs.render())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1941b42-2ea8-4652-90eb-d18838212373",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
