--- a/harmony/HarmonyEye.ipynb
+++ b/harmony/HarmonyEye.ipynb
@@ -31,6 +31,9 @@
     "class QuantumObject(TrackedObject):\n",
     "    name: str\n",
     "    objectType: str\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return super().__eq__(other)\n",
     "    \n",
     "    def __post_init__(self):\n",
     "        super().__post_init__()\n",
@@ -119,11 +122,15 @@
     "                            self.commitChanges(classification)\n",
     "                            self.hc.setReference()\n",
     "                        except AssertionError:\n",
-    "                            nextState = \"illegal\"\n",
+    "                            nextState = \"unstable\"\n",
     "                    elif self.mode == \"add\":\n",
     "                        nextState = \"idle\"\n",
-    "                        self.storeNewObject(classification)\n",
-    "                        self.hc.setReference()\n",
+    "                        try:\n",
+    "                            self.storeNewObject(classification)\n",
+    "                            self.hc.setReference()\n",
+    "                        except Exception as e:\n",
+    "                            print(f\"Add Object Failure: {e}\")\n",
+    "                            nextState = \"unstable\"\n",
     "                    elif self.mode == \"calibrate\":\n",
     "                        try:\n",
     "                            self.calibrateToObject(classification)\n",
