various; trying htmx on config page

--- a/harmony/HarmonyEye.ipynb
+++ b/harmony/HarmonyEye.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e5011882-6494-420e-9820-66707947d6a6",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ae33d128-3274-473f-8e06-8f145fcd396d",
    "metadata": {},
    "outputs": [],
@@ -94,6 +94,17 @@
     "            \"cycle\": self.cycleCounter,\n",
     "            \"cameraChanges\":  {camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
     "                               for camNum, cam in self.cc.cameras.items()}})\n",
+    "\n",
+    "    def annotateObject(self, objName, objType):\n",
+    "        caps = {cap.oid: cap for cap in cm.newObjectBuffer}\n",
+    "        cap = caps[oid]\n",
+    "        center = cc.rsc.trackedObjectToRealCenter(cap)\n",
+    "        qObj = QuantumObject(cap.changeSet, objName, objType)\n",
+    "        factory = ObjectFactories[objType]\n",
+    "        factory(objName)\n",
+    "        mc.Location.set_location(objName, json.dumps(list(center) + [0]))\n",
+    "        cm.memory.append(qObj)\n",
+    "        cm.newObjectBuffer.remove(cap)\n",
     "    \n",
     "    def cycle(self):\n",
     "        try:\n",
@@ -183,17 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e8bd2474-561a-4553-9f87-98a4d1186a70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"harmonyConfiguration.json\", \"r\") as f:\n",
-    "    config = f.read()\n",
-    "cc = CaptureConfiguration(config)\n",
+    "cc = CaptureConfiguration()\n",
+    "cc.loadConfiguration()\n",
     "cameras = cc.cameras\n",
     "cm = HarmonyMachine(cc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c94101ec-e4a3-4099-a868-9dec4fb6c302",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
