update config page; structure object types

--- a/harmony/HarmonyEye.ipynb
+++ b/harmony/HarmonyEye.ipynb
@@ -13,6 +13,7 @@
     "from collections import defaultdict\n",
     "from uuid import uuid4\n",
     "from dataclasses import dataclass\n",
+    "import json\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from ipynb.fs.full.Observer import CaptureMachine, TrackedObject, CaptureConfiguration, Camera, hStackImages, vStackImages\n",
@@ -95,14 +96,14 @@
     "            \"cameraChanges\":  {camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
     "                               for camNum, cam in self.cc.cameras.items()}})\n",
     "\n",
-    "    def annotateObject(self, objName, objType):\n",
+    "    def annotateObject(self, oid, objName, objType):\n",
     "        caps = {cap.oid: cap for cap in cm.newObjectBuffer}\n",
     "        cap = caps[oid]\n",
-    "        center = cc.rsc.trackedObjectToRealCenter(cap)\n",
+    "        center = cc.rsc.changeSetToRealCenter(cap)\n",
     "        qObj = QuantumObject(cap.changeSet, objName, objType)\n",
-    "        factory = ObjectFactories[objType]\n",
+    "        factory = mc.ObjectFactories[objType]\n",
     "        factory(objName)\n",
-    "        mc.Location.set_location(objName, json.dumps(list(center) + [0]))\n",
+    "        mc.XYLocation.set_location(objName, json.dumps(list(center) + [0]))\n",
     "        cm.memory.append(qObj)\n",
     "        cm.newObjectBuffer.remove(cap)\n",
     "    \n",
@@ -208,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94101ec-e4a3-4099-a868-9dec4fb6c302",
+   "id": "45308c38-132e-475e-a625-d60c4645cac0",
    "metadata": {},
    "outputs": [],
    "source": []
