--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -673,7 +673,7 @@
     "        return True\n",
     "    \n",
     "    def trackedObjectLastDistance(self, trackedObject: TrackedObject):\n",
-    "        previousChangeSet = trackedObject.previousVersion().changeSet\n",
+    "        previousChangeSet = trackedObject.previousVersion()\n",
     "        currentLocation = self.changeSetToRealCenter(trackedObject.changeSet)\n",
     "        previousLocation = self.changeSetToRealCenter(previousChangeSet)\n",
     "        return distanceFormula(previousLocation, currentLocation)\n",
@@ -897,13 +897,13 @@
     "        for c in objs:\n",
     "            newContour = {\n",
     "                camNum: np.array([\n",
-    "                    [[cm.cc.rsc.camCoordToRealSpace(camNum, pt[0])]\n",
+    "                    [[self.cc.rsc.camCoordToRealSpace(camNum, pt[0])]\n",
     "                    for cnt in cS.changeContours for pt in cnt]], dtype=\"int32\")\n",
     "                for camNum, cS in c.changeSet.items() if cS.changeType in ['add', 'move']}\n",
     "        \n",
     "            contourBase = np.zeros([1200, 1200], dtype=\"uint8\")\n",
     "            contourOverlap = None\n",
-    "            cSDeltas = cm.cc.rsc.changeSetCenterDeltas(c)\n",
+    "            cSDeltas = self.cc.rsc.changeSetCenterDeltas(c)\n",
     "            for index, (camNum, contours) in enumerate(newContour.items()):\n",
     "                tx, ty = cSDeltas[camNum]\n",
     "                M = np.float32([[1, 0, tx], [0, 1, ty]])\n",
