fix delete & new_camera

--- a/harmony/HarmonyEye.ipynb
+++ b/harmony/HarmonyEye.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "08c73f06-a340-44c8-84b6-a88123472897",
    "metadata": {
     "tags": []
@@ -16,7 +16,8 @@
     "import json\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipynb.fs.full.Observer import CaptureMachine, TrackedObject, CaptureConfiguration, Camera, hStackImages, vStackImages, cameras\n",
+    "from ipynb.fs.full.Observer import RemoteCamera, CaptureMachine, TrackedObject, CaptureConfiguration, \\\n",
+    "    Camera, hStackImages, vStackImages, cameras\n",
     "import dma.MechaCombat as mc\n",
     "QuantumSystem = mc.QuantumSystem"
    ]
