--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -719,7 +719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cameras = defaultdict(lambda: None)"
+    "cameras = {}"
    ]
   },
   {
@@ -781,7 +781,7 @@
     "                cameras[camName] = RemoteCamera(address=addr, activeZone=az, camName=camName)\n",
     "    \n",
     "    def capture(self):\n",
-    "        self.lastCapture = {cam.camName: cam.capture() for cam in cameras.values()}\n",
+    "        self.lastCapture = {cam.camName: cam.capture() for cam in cameras.values() if cam is not None}\n",
     "\n",
     "    def setBase(self):\n",
     "        for c in cameras.values():\n",
@@ -789,7 +789,8 @@
     "    \n",
     "    def setReference(self):\n",
     "        for c in cameras.values():\n",
-    "            c.setReferenceFrame()\n",
+    "            if c is not None:\n",
+    "                c.setReferenceFrame()\n",
     "    \n",
     "    def scanCamsForCalibrationBoxes(self):\n",
     "        return {cam.camName: (qrs := decode(cam.mostRecentFrame), len(qrs)) for cam in cameras.values()}\n",
